updated variables to match figma, fixed LoginForm to work on mobile, minor changes to styles

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,11 +1,14 @@
 @use "../../assets/styles/variables"as*;
 @use "../../assets/styles/mixins"as*;
-@use "../../assets/styles/typography"as*;
 
 .login {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(110.53deg, #2ABCA1 4.37%, #0A7AA7 98.99%);
+    background: $background-gradient;
+
+    @include mobile {
+        background: $backgroun-gradient-mobile;
+    }
 
     &__page {
         display: flex;
@@ -17,10 +20,6 @@
         @include mobile {
             height: 100vh;
             padding-bottom: 6rem;
-        }
-
-        &--logo {
-            @include mobile {}
         }
     }
 }
