--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -17,7 +17,7 @@
     margin: 4rem 0 2rem 0;
 
     @include mobile {
-        width: 90%;
+        width: 90vw;
     }
 
     &-rectangle {
